# Signify

./: .env.example  .flutter-plugins-dependencies  .gitignore  1.ipynb  API.py  API_video.py  Action trainer.ipynb  Angle.ipynb  Angle_extract.ipynb  Custom Dataset.ipynb  CustomTrainer.py  INSTALL.md  ISL Animation Script.py  MP_extraction.ipynb  README.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  Sign_detect.py  Vedio_augmentation.ipynb  angle_model.py  api_app.py  background.js  client_secret_543762448574-5fq5b5trnf5gv6cpjh7t8hltddpsgaeu.apps.googleusercontent.com.json  config.example.js  content.js  convert_video.py  extract_data.ipynb  fallback-avatar.js  flutter_native_splash.yaml  help.html  index.html  manifest.json  mediapipe_include.ipynb  mediapipe_noCSV.ipynb  my-release-key.jks  package-lock.json  package.json  popup.html  popup.js  pubspec.yaml  (+23 more)
Animation/: normal person.blend
Direct_python_version/: API.py  rest_detector_model.pkl  utils.py
MP API/: api_mp.py  test_api.py  utils_mpAPI.py  visualize_coords.py
MP_DATA/: right.json
Misc/: convert_video.py  rest_detector.py  test_model.py  visualize_dataset.py
Model/: Custom Dataset.ipynb  INCLUDE_10_V4_angled.h5  INCLUDE_10_V4_clipped.h5  INCLUDE_10_V5_angled.h5  INCLUDE_8_V4_angles.h5  convert_video.py  mediapipe_include.ipynb  mp_helperfunc.py  pyproject.toml  test.py  test_model.py  train_include.ipynb
Models/: left.p  pose.p  right.p
Python Live/: API.py  custom.py  rest.ipynb  test.ipynb
Python_Live/: customData_train.ipynb  extract_data.ipynb  test_model.ipynb  train_model.ipynb
RNN/: API.py  pyproject.toml  train_model.ipynb  utils.py
Recognition_Model_Updated/: SS.py  test.ipynb
Setup/: install.bat  req.txt
android/: build.gradle  gradle.properties  (+1 more)
(+200 files in other folders)
